--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -46,7 +46,7 @@ body {
   .util_mobile_wrap {
     display: flex;
     justify-content: end;
-    padding: 7px 10px;
+    padding: 10px;
     background: $colorNV2;
   }
 
@@ -58,19 +58,25 @@ body {
     li {
       display: flex;
       align-items: center;
-      margin-right: 8px;
+      margin-right: 10px;
+      color: $colorWH1;
+      font-size: 1.3rem;
+
+      &.hidden {
+        display: none;
+      }
 
       &:last-child {
         margin-right: 0;
       }
 
       img {
-        margin-right: 4px;
-        width: 1rem;
+        margin-right: 5px;
+        width: 1.3rem;
       }
 
       a {
-        font-size: 1rem;
+        font-size: 1.3rem;
         color: $colorWH1;
       }
     }
@@ -791,6 +797,235 @@ body {
     display: none;
   }
 }
+
+/*==============================================
+  회원가입 페이지
+================================================*/
+/*<----------페이지 정보 page info---------->*/
+.page_info_wrap {
+  background: linear-gradient(to right, $colorTGN1, $colorBL1);
+
+  .page_title {
+    padding: 25px 10px;
+    color: $colorWH1;
+    font-size: 2.4rem;
+    font-weight: 600;
+  }
+}
+
+/*<----------로그인 폼 signin form---------->*/
+.signup_section {
+  .center_wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100%;
+    padding: 50px 10px;
+  }
+  .signup_form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 400px;
+    padding: 30px 10px;
+    border-radius: 5px;
+    background: $colorWH1;
+    box-shadow: 0 0 5px rgba($color: $colortxtGR1, $alpha: 0.8);
+  }
+
+  .signup_label {
+    margin-bottom: 10px;
+    padding-left: 10px;
+    color: $colorBK1;
+    font-size: 1.7rem;
+  }
+
+  .signup_input {
+    margin-bottom: 20px;
+    padding: 15px;
+    border: 1px solid $colorLGR1;
+    background: $colorLGR1;
+    font-size: 1.7rem;
+    box-sizing: border-box;
+    transition: border 0.1s;
+
+    &[type="password"] {
+      font-family: "나눔고딕";
+
+      &::placeholder {
+        font-family: "NanumSquare", sans-serif;
+      }
+    }
+
+    &.on {
+      margin-bottom: 10px;
+      border: 1px solid red;
+
+      & + .error_txt {
+        display: block;
+        margin-bottom: 20px;
+      }
+    }
+  }
+
+  .error_txt {
+    display: none;
+    padding: 0 10px;
+    color: red;
+    font-size: 1.3rem;
+    word-break: keep-all;
+  }
+
+  .btn_signup {
+    margin-top: 20px;
+    padding: 15px;
+    background-color: $colorTGN2;
+    color: $colorWH1;
+    font-size: 1.7rem;
+    font-weight: 600;
+    cursor: pointer;
+  }
+
+  .signup_info {
+    max-width: 400px;
+    margin-top: 20px;
+    padding: 20px 10px;
+    border: 1px solid $colorlineLGR1;
+    border-radius: 5px;
+    background: $colorWH1;
+    color: $colorBK1;
+    font-size: 1.3rem;
+  }
+
+  .guide1 {
+    margin-bottom: 10px;
+    line-height: 1.3;
+  }
+
+  .db_link {
+    display: block;
+    margin-bottom: 10px;
+    color: $colorBL1;
+  }
+
+  .guide2 {
+    word-break: keep-all;
+    line-height: 1.3;
+  }
+}
+
+/*==============================================
+  로그인 페이지
+================================================*/
+/*<----------로그인 폼 signin form---------->*/
+.signin_section {
+  .center_wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100%;
+    padding: 50px 10px;
+  }
+  .signin_form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 400px;
+    padding: 30px 10px;
+    border-radius: 5px;
+    background: $colorWH1;
+    box-shadow: 0 0 5px rgba($color: $colortxtGR1, $alpha: 0.8);
+  }
+
+  .signin_label {
+    margin-bottom: 10px;
+    padding-left: 10px;
+    color: $colorBK1;
+    font-size: 1.7rem;
+  }
+
+  .signin_input {
+    margin-bottom: 20px;
+    padding: 15px;
+    border: 1px solid $colorLGR1;
+    background: $colorLGR1;
+    font-size: 1.7rem;
+
+    &[type="password"] {
+      font-family: "나눔고딕";
+
+      &::placeholder {
+        font-family: "NanumSquare", sans-serif;
+      }
+    }
+
+    &.on {
+      margin-bottom: 10px;
+      border: 1px solid red;
+
+      & + .error_txt {
+        display: block;
+        margin-bottom: 20px;
+      }
+    }
+  }
+
+  .error_txt {
+    display: none;
+    padding: 0 10px;
+    color: red;
+    font-size: 1.3rem;
+    word-break: keep-all;
+  }
+
+  .btn_signin {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 15px;
+    background-color: $colorBL1;
+    color: $colorWH1;
+    font-size: 1.7rem;
+    font-weight: 600;
+    cursor: pointer;
+  }
+
+  .btn_signup {
+    padding: 15px;
+    background-color: $colorTGN2;
+    color: $colorWH1;
+    font-size: 1.7rem;
+    font-weight: 600;
+    text-align: center;
+  }
+
+  .signup_info {
+    max-width: 400px;
+    margin-top: 20px;
+    padding: 20px 10px;
+    border: 1px solid $colorlineLGR1;
+    border-radius: 5px;
+    background: $colorWH1;
+    color: $colorBK1;
+    font-size: 1.3rem;
+  }
+
+  .guide1 {
+    margin-bottom: 10px;
+    line-height: 1.3;
+  }
+
+  .db_link {
+    display: block;
+    margin-bottom: 10px;
+    color: $colorBL1;
+  }
+
+  .guide2 {
+    word-break: keep-all;
+    line-height: 1.3;
+  }
+}
+
 /*==============================================
 |||||||||||||||||||||||||||||||||||||||||||||||||
   태블릿 Tablet
@@ -827,19 +1062,25 @@ body {
         display: flex;
         align-items: center;
         margin-right: 10px;
+        color: $colortxtGR1;
+        font-size: 1.4rem;
+
+        &.hidden {
+          display: none;
+        }
 
         &:last-child {
           margin-right: 0;
         }
 
         img {
-          margin-right: 4px;
           width: 1.4rem;
+          margin-right: 4px;
         }
 
         a {
-          font-size: 1.4rem;
           color: $colortxtGR1;
+          font-size: 1.4rem;
         }
       }
     }
